# updates-summarization

./: README.md  app.py  daily-stand-up_responses_19-06-until-10-07.csv  export_report.py  main.py  pyproject.toml  summaries.db
